5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1712_2497.log
== TEST (2019-05-09 09:14:28) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (saldo > 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:14:50) 
-- CODE:
qi    = int(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (saldo > 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:24:42) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (saldo > 1 * 12):
	rend = saldo * juros / 100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:26:30) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (saldo > 1 * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo,2)
	t = t + 1

	
print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:26:46) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (saldo > 1 * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo,2)
	t = t + 1

	
print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:27:55) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 1
# Atualizacao de saldo
while (saldo > 1 * 12):
	saldo = saldo + saldo * juros / 100
	saldo = round(saldo,2)
	t = t + 1

	
print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    qi    = int(input())
ValueError: invalid literal for int() with base 10: '575.25'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:28:56) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t > 1 * 12):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
	t = t + 1
	
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:29:30) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t < 1 * 12):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
	t = t + 1
	
print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
921.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:33:16) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (saldo <= 1 * 12):
	
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   t = t + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 11
    t = t + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 09:33:34) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t <= 1 * 12):
	
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   t = t + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 11
    t = t + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:30:22) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t <= 1 * 30):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   t = t + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 10
    t = t + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:04) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t < 1 * 30):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   t = t + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 10
    t = t + 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:58) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

# Atualizacao de saldo
while (tempo < 1 * 30):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   tempo = tempo + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 10
    tempo = tempo + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:58) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

# Atualizacao de saldo
while (tempo < 1 * 30):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   tempo = tempo + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 10
    tempo = tempo + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:02) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

# Atualizacao de saldo
while (tempo < 1 * 30):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   tempo = tempo + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 10
    tempo = tempo + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:11) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

# Atualizacao de saldo
while (tempo < 1 * 30):
	saldo = saldo + saldo * juros/100
	saldo = round(saldo,2)
   tempo = tempo + 1
	print(saldo)
		

	

-- ERROR:
File "XXXX", line 10
    tempo = tempo + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:27) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t < 1 * 12):
   saldo = saldo + saldo * juros/100
   saldo = round(saldo, 2)
   t = t + 1
		

	

-- ERROR:
File "XXXX", line 10
    tempo = tempo + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:51) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t < 1 * 12):
   saldo = saldo + saldo * juros/100
   saldo = round(saldo, 2)
   t = t + 1
		

	

-- ERROR:
File "XXXX", line 10
    tempo = tempo + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:11) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t < 1 * 12):
   saldo = saldo + saldo * juros/100
   saldo = round(saldo, 2)
   t = t + 1
		

	

-- ERROR:
File "XXXX", line 10
    tempo = tempo + 1
                    ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:42) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t < 1 * 12):
   saldo = saldo + saldo * juros/100
   saldo = round(saldo, 2)
   t = t + 1
print(saldo)
		

	

-- OUTPUT:
921.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:45) 
-- CODE:
qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      
t = 0
# Atualizacao de saldo
while (t < 1 * 12):
   saldo = saldo + saldo * juros/100
   saldo = round(saldo, 2)
   t = t + 1
print(saldo)
		

	

-- OUTPUT:
921.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:50:29) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (tempo > t):
	rend = saldo * (juros / 100)
	saldo = saldo + rend
	t = t + 1	
	print(round(saldo, 2))

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:50:51) 
-- CODE:
qi = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      

t = 0

while (tempo > t):
	rend = saldo * (juros / 100)
	saldo = saldo + rend
	t = t + 1	
	print(round(saldo, 2))

	

-- EXECUTION TIME:
0.151574
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
